# beever-atlas

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Beever_Atlas_Feature_Spec.docx  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  TRADEMARK.md  atlas  docker-compose.auth.yml  docker-compose.nebula.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  codeql.yml  deploy.yml  nightly.yml  smoke.yml  trigger-docs-rebuild.yml
bot/: .eslintrc.json  Dockerfile  README.md  eslint.config.js  package-lock.json  package.json
bot/src/: bridge-classifier.test.ts  bridge-classifier.ts  bridge-error-classifier.test.ts  bridge.auth.test.ts  bridge.mattermost-ssrf.test.ts  bridge.slack-ssrf.test.ts  bridge.ts  chat-manager.test.ts  chat-manager.ts  http-utils.test.ts  http-utils.ts  index.ts  logger.ts  readbody.test.ts  slack-mrkdwn.test.ts  slack-mrkdwn.ts  sse-client.test.ts  sse-client.ts  validate-env.test.ts  validate-env.ts  webhook-buffer.test.ts  webhook-buffer.ts
bot/teams-app/: build-package.mjs  manifest.json
demo/: README.md  docker-compose.demo.yml  seed.py
demo/corpus/: ada-lovelace-contributions.md  ada-lovelace.md  analytical-engine.md  charles-babbage.md  guido-van-rossum.md  python-design-philosophy.md  python-history.md
demo/fixtures/: README.md  manifest.json  mongo_seed.json  neo4j_graph.cypher
docs/: mcp-server.md  pipeline-architecture.md  redesign-test-plan.md
docs/architecture/: oss-pipeline.md
docs/content/: comparison.mdx  roadmap.mdx
docs/guides/: slack-setup.md
docs/integrations/: hermes.md  openclaw.md  push-sources.md
docs/mcp-server-examples/: claude-code.md  cursor.md
docs/qa/: tool-audit-2026-Q2.md
docs/runbooks/: ai-setup.md  atlas-yaml.md  embedding-migration.md  embedding-test-plan.md  litellm-cutover.md  local-dev-reset.md  memory-then-wiki-events.md  sync-progress-and-throttle.md  wiki-entity-cleanup.md  wiki-maintenance-soak.md  wiki-narrative-articles-rollout.md  wiki-recompile-skip.md
docs/v1-archive/: ARCHITECTURE_OVERVIEW_V2_MONOLITH.md  PROJECT_ANALYSIS.md  TECHNICAL_PROPOSAL_MONOLITH.md
docs/v2/: 01-architecture-overview.md  02-semantic-memory.md  03-graph-memory.md  04-query-router.md  05-ingestion-pipeline.md  06-wiki-generation.md  07-deployment.md  08-resilience.md  09-observability.md  10-access-control.md  11-frontend-design.md  12-api-design.md  13-adk-integration.md  README.md  current-architecture-diagram.md  decisions.md  memory-architecture.md  reference-papers.md  weakness-resolution-map.md
runbooks/: entity-dedup.md  sync-metrics.md
scripts/: README.md  atlas_apply.py  backfill_name_vectors.py  bench_ingest.py  check_mattermost_channels.py  dedupe_teams_connections.py  dry_run_ask_session_scoped.py  dry_run_enrichment.py  dry_run_eof_hardening.py  dry_run_file_import.py  dry_run_ingestion.py  dry_run_live.py  dry_run_pipeline_hardening.py  dry_run_policy.py  dry_run_ui_layout.py  migrate_to_endpoint_catalog.py  migrate_wiki_pages_to_slug_identity.py  nebula_setup.py  qa_test_harness.py  reembed_facts.py  smoke_embedding.py  test_gemma4_local.py  test_ingestion_mock.py  test_pipeline_design.py  test_platform_bridge.py  verify_sync_monitor.py  wait-for-health.sh  watch_pipeline.py  wiki_bench.py
scripts/deploy/: README.md  bootstrap.sh  deploy.sh  destroy.sh  provision.sh  ssh.sh  (+2 more)
tests/: conftest.py  test_adapters.py  test_adaptive_batcher.py  test_adaptive_batcher_integration.py  test_adk.py  test_ask_endpoint.py  test_auth.py  test_batch_processor_truncation.py  test_bridge_hmac.py  test_channels.py  test_chat_history_store_citations_mixed.py  test_config.py  test_config_validator.py  test_consolidation_enrichment.py  test_crypto.py  test_echo_agent.py  test_fact_tracking.py  test_file_importer.py  test_graph_protocol.py  test_health.py  test_http_safe.py  test_imports_api.py  test_json_recovery.py  test_json_recovery_fuzz.py  test_json_recovery_strings.py  test_language_detector.py  test_llm_provider.py  test_mcp_gate.py  test_mcp_registry.py  test_media_cache.py  test_model_resolver.py  test_multi_connection.py  test_multilingual_native_memory.py  test_neo4j_hops.py  test_orchestrator_lock.py  test_orphan_platform_fallback.py  test_pdf_chunking.py  test_persister_heuristic.py  test_pipeline_hardening.py  test_pipeline_orchestrator.py  (+24 more)
web/: .env.example  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vitest.config.ts
(+909 files in other folders)
